1. Product details screen 2. Checkout screen 3. Clean architecture

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,3 +1,32 @@
 {
-  "appName": "Fashion E-Commerce"
+  "appName": "Fashion E-Commerce",
+  "newArrival": "New Arrivals",
+  "popular": "Popular",
+  "seeAll": "See all",
+  "selectSize": "Select Size",
+  "specifications": "Specifications",
+  "care": "Care",
+  "region": "Region",
+  "country": "Country",
+  "colors": "Colors",
+  "material": "Material",
+  "design": "Design",
+  "totalPrice": "Total Price",
+  "addToCart": "Add To Cart",
+  "exploreCategory": "Explore Your Style",
+  "yourCart": "Your Cart",
+  "emptyCartMsg": "Your Cart is empty. Lets explore something great.",
+  "size": "Size",
+  "quantity": "Quantity",
+  "price": "Price",
+  "total": "Total",
+  "tax": "Tax",
+  "invoice": "Invoice",
+  "deliveryCharge": "Delivery Charge",
+  "itemTotal": "Item Total",
+  "deliverTo": "Deliver to",
+  "home": "Home",
+  "work": "Work",
+  "other": "Other",
+  "placeOrder": "Place Order"
 }
