--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -48,5 +48,39 @@
   "seller": "Seller",
   "orderId": "Order ID",
   "allProducts": "All Products",
-  "viewOrder": "View Order"
+  "viewOrder": "View Order",
+  "payment": "Payment",
+  "wallet": "Wallet",
+  "cash": "Cash",
+  "cashOnD": "Cash On Delivery",
+  "card": "Card",
+  "selectPayment": "Select payment method to pay",
+  "payNow": "Pay Now",
+  "walletBalanceMsg": "Not sufficient wallet balance",
+  "addAmount": "Add Amount",
+  "enterAmount": "Enter Amount",
+  "amount": "Amount",
+  "walletBalance": "Wallet Balance",
+  "walletAmountAdded": "Wallet amount added successfully",
+  "preferences": "Preferences",
+  "helpAndSupport": "Help & Support",
+  "logout": "Logout",
+  "myProfile": "My Profile",
+  "fullName": "Full Name",
+  "enterFullName": "Enter Full Name",
+  "mobileNumber": "Mobile Number",
+  "enterMobileNumber": "Enter Mobile Number",
+  "emailAddress": "Email Address",
+  "enterEmail": "Enter Email Address",
+  "update": "Update",
+  "profileUpdateSuccess": "Profile updated successfully",
+  "gallery": "Gallery",
+  "camera": "Camera",
+  "imageFrom": "Fetch your photo from",
+  "or": "Or",
+  "deleteAccount": "Delete Account",
+  "sureToDelete": "Are you sure to delete account?",
+  "no": "No",
+  "cancel": "Cancel",
+  "delete": "Delete"
 }
