Address screen done

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -88,5 +88,28 @@
   "delete": "Delete",
   "searchProducts": "Search Products",
   "searchHint": "Search for products, brands and more",
-  "userName": "User Name"
+  "userName": "User Name",
+  "myAddress": "My Address",
+  "addAddress": "Add Address",
+  "editAddress": "Edit Address",
+  "emptyAddressMsg": "Your address list is empty. Lets add some address.",
+  "add": "Add",
+  "edit": "Edit",
+  "deleteAddress": "Delete Address",
+  "sureToDeleteAddress": "Are you sure to delete this address?",
+  "houseOrPlace": "House/Place",
+  "houseNo": "House No",
+  "street": "Street",
+  "addressLine1": "Address Line 1",
+  "addressLine2": "Address Line 2",
+  "city": "City",
+  "state": "State",
+  "pinCode": "Pin Code",
+  "enterAddress": "Enter Address",
+  "enterCity": "Enter City",
+  "enterState": "Enter State",
+  "enterPinCode": "Enter Pin Code",
+  "enterHouseOrPlace": "Enter House/Place",
+  "enterHouseNo": "Enter House No",
+  "enterStreet": "Enter Street"
 }
