Help & Support screen done

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -121,5 +121,10 @@
   "footWear": "Footwear",
   "bestsellers": "Bestsellers",
   "accessories": "Accessories",
-  "collections": "Collections"
+  "collections": "Collections",
+  "privacyPolicy": "Privacy Policy",
+  "termsAndConditions": "Terms & Conditions",
+  "contactUs": "Contact Us",
+  "faqs": "FAQs",
+  "aboutUs": "About Us"
 }
