1. Login screen 2. Signup screen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -126,5 +126,30 @@
   "termsAndConditions": "Terms & Conditions",
   "contactUs": "Contact Us",
   "faqs": "FAQs",
-  "aboutUs": "About Us"
+  "aboutUs": "About Us",
+  "password": "Password",
+  "enterPassword": "Enter Password",
+  "minPassLength": "Password must be at least 6 characters",
+  "confirmPassword": "Confirm Password",
+  "enterConfirmPassword": "Enter Confirm Password",
+  "confirmPassMatch": "Confirm password does not match",
+  "login": "Login",
+  "orLoginWith": "Or Login With",
+  "google": "Google",
+  "dontHaveAccount": "Don't have an account?",
+  "registerHere": "Register Here",
+  "forgotPassword": "Forgot Password?",
+  "otp": "OTP",
+  "enterOTP": "Enter OTP",
+  "enterVerificationCode": "Enter verification code sent to your mobile number",
+  "agreeWithOur": "By continuing you agree to our",
+  "signUp": "Sign Up",
+  "enterNumberToContinue": "Enter your mobile number to continue",
+  "change": "Change",
+  "sendOTP": "Send OTP",
+  "otpVerification": "OTP Verification",
+  "verify": "Verify",
+  "notGetOTP": "Didn't get OTP?",
+  "resendOTP": "Resend OTP",
+  "resendOTPIn": "Resend OTP in"
 }
