Login flow ui fix

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,10 @@
 {
-  "appName": "Fashion E-Commerce",
+  "appName": "EF Shop",
+  "welcomeBack": "Welcome Back!",
+  "skip": "Skip",
+  "splashMs1": "Wear What’s Next.",
+  "splashMs2": "Fresh Fits. First Dibs.",
+  "version": "Version",
   "newArrival": "New Arrivals",
   "popular": "Popular",
   "seeAll": "See all",
@@ -97,21 +102,24 @@
   "edit": "Edit",
   "deleteAddress": "Delete Address",
   "sureToDeleteAddress": "Are you sure to delete this address?",
-  "houseOrPlace": "House/Place",
-  "houseNo": "House No",
-  "street": "Street",
-  "addressLine1": "Address Line 1",
-  "addressLine2": "Address Line 2",
-  "city": "City",
+  "houseOrPlace": "House/Flat/Block Name",
+  "houseNo": "House/Flat/Block No. (Optional)",
+  "street": "Apartment/Street Name",
+  "landmarkArea": "Landmark/Area (Optional)",
+  "city": "City/District",
   "state": "State",
-  "pinCode": "Pin Code",
-  "enterAddress": "Enter Address",
+  "pinCode": "Postal/Pin Code",
+  "saveAs": "Save As",
+  "familyOrFriend": "Family Or Friends",
+  "receiverName": "Receiver Name",
+  "receiverMobileNumber": "Receiver Mobile Number",
+  "enterReceiverName": "Enter Receiver Name",
+  "enterReceiverMobileNumber": "Enter Receiver Mobile Number",
   "enterCity": "Enter City",
   "enterState": "Enter State",
-  "enterPinCode": "Enter Pin Code",
-  "enterHouseOrPlace": "Enter House/Place",
-  "enterHouseNo": "Enter House No",
-  "enterStreet": "Enter Street",
+  "enterPinCode": "Enter Postal/Pin Code",
+  "enterHouseOrPlace": "Enter House/Flat/Block Name",
+  "enterStreet": "Enter Apartment/Street Name",
   "men": "Men",
   "women": "Women",
   "kids": "Kids",
@@ -139,11 +147,12 @@
   "registerHere": "Register Here",
   "forgotPassword": "Forgot Password?",
   "otp": "OTP",
+  "and": "and",
   "enterOTP": "Enter OTP",
   "enterVerificationCode": "Enter verification code",
   "enterVerificationCodePhone": "Enter verification code sent to your mobile number",
   "enterVerificationCodeEmail": "Enter verification code sent to your email address",
-  "agreeWithOur": "By continuing you agree to our",
+  "agreeWithOur": "By signing up, you agree to our",
   "signUp": "Sign Up",
   "enterNumberToContinue": "Enter your mobile number to continue",
   "change": "Change",
@@ -201,6 +210,7 @@
   "dontReceiveCode": "Didn't receive any code?",
   "resendNewCode": "Resend New Code",
   "txtContinue": "Continue",
+  "signUpText": "Tap “Sign up” and treat yourself \nto the latest looks",
   "@byClickEmailVerify": {
     "placeholders": {
       "email": {
