1. Order Details 2. Order Placed 3. Profile 4. Wallet

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -38,7 +38,7 @@
   "address": "Address",
   "items": "Items",
   "orderPlaced": "Order Placed",
-  "orderPlacedSuccess": "Order Placed Successfully",
+  "orderPlacedSuccess": "Your Order Has Been Placed",
   "orderPlacedMsg": "We are pleased to confirm your order no",
   "ordered": "Ordered",
   "packed": "Packed",
@@ -232,6 +232,20 @@
   "googlePay": "Google Pay",
   "amazonPay": "Amazon Pay",
   "paypal": "PayPal",
+  "updateProfile": "Update Profile",
+  "cart": "Cart",
+  "orderNumber": "Order Number",
+  "orderShipped": "Order Shipped",
+  "orderPacked": "Order Packed",
+  "orderCancelled": "Order Cancelled",
+  "exchangeMsg": "Exchange/Return available till 10 June 2025",
+  "viewFullDetails": "View Full Details",
+  "exchange": "Exchange",
+  "txtReturn": "Return",
+  "gotoOrderHistory": "Go To Order History",
+  "continueShopping": "Continue Shopping",
+  "totalBalance": "Total Balance",
+  "addMoney": "Add Money",
   "@byClickEmailVerify": {
     "placeholders": {
       "email": {
