1. Product details 2. Cart screen 3. Payment screen

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appName">Fashion E-Commerce</string>
+    <string name="appName">EF Shop</string>
 </resources>
