1. Home category 2. Favorite list 3. Order details changes

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -253,6 +253,7 @@
   "shippedWith": "Shipped With",
   "selectAddress": "Select Address",
   "selectAddressMsg": "Please select address to place order",
+  "backPressMsg": "Press back again to exit the app",
   "@byClickEmailVerify": {
     "placeholders": {
       "email": {
